--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-     
+    <main class="">
+     <%= yield %>
     </main>
   </body>
 </html>
